--- a/D365O_Addin_NewField/Addin/Addin.csproj
+++ b/D365O_Addin_NewField/Addin/Addin.csproj
@@ -66,6 +66,7 @@
     <Compile Include="FormBase.Designer.cs">
       <DependentUpon>FormBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormController.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
