Adding "known_data.xml" file
This file is going to be used to fetch data in order to fill documentation tags.

--- a/D365O_Addin_ClassDevDocumentation/Addin/Addin.csproj
+++ b/D365O_Addin_ClassDevDocumentation/Addin/Addin.csproj
@@ -63,6 +63,9 @@
   <ItemGroup>
     <None Include="InstallToVS.bat" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="known_data.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(INETROOT)\build\msbuild\MS.Dynamics.Build.Targets" Condition=" '$(INETROOT)' != '' " />
   <Import Project="$(INETROOT)\Source\Frameworks\DevToolsVS12\common\Microsoft.Dynamics.Framework.Tools.Extensibility.Targets" Condition=" '$(INETROOT)' != '' " />
