--- a/D365O_Addin_RelaxDude/Addin/Addin.csproj
+++ b/D365O_Addin_RelaxDude/Addin/Addin.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BD4600C6-8DF3-4D4E-B6B5-EA27C1949995}</ProjectGuid>
+    <ProjectGuid>{B01DDD72-E219-4ECD-B0C0-0BF14379D0E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Addin</RootNamespace>
-    <AssemblyName>D365O.Addin.MakeMeLaugh</AssemblyName>
+    <AssemblyName>D365O.Addin.RelaxDude</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SkipAssemblyComVisible>true</SkipAssemblyComVisible>
@@ -34,7 +34,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Drawing" />
@@ -42,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Joking.cs" />
     <Compile Include="MainMenuAddIn.cs" />
+    <Compile Include="Networking.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AddinResources.Designer.cs">
       <AutoGen>True</AutoGen>
