--- a/D365O_Addin_BuildAndSync/Addin/Addin.csproj
+++ b/D365O_Addin_BuildAndSync/Addin/Addin.csproj
@@ -34,14 +34,14 @@
   <ItemGroup>
     <Reference Include="Microsoft.Dynamics.AX.Metadata, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\2mf3oojf.drz\Microsoft.Dynamics.AX.Metadata.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\0uliewii.3zi\Microsoft.Dynamics.AX.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Dynamics.AX.Metadata.Extensions, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\2mf3oojf.drz\Microsoft.Dynamics.AX.Metadata.Extensions.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\0uliewii.3zi\Microsoft.Dynamics.AX.Metadata.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Dynamics.Framework.Tools.BuildTasks">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\2mf3oojf.drz\Microsoft.Dynamics.Framework.Tools.BuildTasks.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\0uliewii.3zi\Microsoft.Dynamics.Framework.Tools.BuildTasks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -51,9 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DesignerContextMenuAddIn.cs" />
-    <Compile Include="Element.cs" />
-    <Compile Include="ElementOperation.cs" />
-    <Compile Include="ElementOperation_OLD.cs" />
+    <Compile Include="Elementing.cs" />
+    <Compile Include="Operating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AddinResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -83,5 +82,8 @@
   -->
   <PropertyGroup Condition="'$(BuildingInsideVisualStudio)'=='true'">
     <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)" "$(TargetDir)$(TargetName).pdb"</PostBuildEvent>
   </PropertyGroup>
 </Project>
