--- a/D365O_Addin_TableCountRecords/Addin/Addin.csproj
+++ b/D365O_Addin_TableCountRecords/Addin/Addin.csproj
@@ -74,4 +74,7 @@
   <PropertyGroup Condition="'$(BuildingInsideVisualStudio)'=='true'">
     <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)" "$(TargetDir)$(TargetName).pdb"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
