Added ability to type EDT names and removed delay on form opening

--- a/D365O_Addin_NewField/Addin/Addin.csproj
+++ b/D365O_Addin_NewField/Addin/Addin.csproj
@@ -126,6 +126,7 @@
     <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>call "$(ProjectDir)\installtovs.bat" "$(TargetPath)" "$(TargetDir)$(TargetName).pdb"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
